overflow y fixed

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,15 +26,12 @@ body {
 .site {
   background-color: black;
   width: 100%;
+  height: 100vh;
   position: relative;
   overflow-x: hidden;
   overflow-y: initial;
-  @media screen and (min-height: 800px) {
-    overflow-y: hidden;
-  }
   @media screen and (max-width: 768px) {
     overflow-y: scroll;
-    height: 95vh;
   }
 }
 
