--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -89,8 +89,8 @@
   }
   @media screen and (max-width: 768px) {
     padding: 1rem;
-    height: 1100px;
-    grid-template: 90% 10% / 100%;
+    height: 1120px;
+    grid-template: 88% 12% / 100%;
   }
   &--short {
     text-align: left;
@@ -169,6 +169,7 @@
   @media screen and (max-width: 768px) {
     grid-template: 0.1% 0.1% 0.1% 33% 33% 33% / 100%;
     margin-top: 0;
+    padding-bottom: 2rem;
   }
   &--short {
     grid-column: 1 / 3;
